2006-11-27  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile (HURDLIBS): Add `netfs'.

2006-06-15  Thomas Schwinge  <tschwinge@gnu.org>

	* hello-mt.c (trivfs_S_io_seek): Seek into the correct direction for
	`SEEK_END'.  Return EINVAL if file pointer would become negative.
	* hello.c (trivfs_S_io_seek): Likewise.

2006-03-25  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #15808]
	* ifsock.c: Include <argp.h>, <sys/cdefs.h> and <version.h>.
	(__XSTRING): New macro.
	(argp_program_version, doc, argp): New variables.
	(main): Call argp_parse().
	Based on a patch by Ben Asselstine <benasselstine@gmail.com>.

2005-07-12  Marcus Brinkmann  <marcus@gnu.org>

	* magic.c (magic_getroot): Deallocate DOTDOT if processing here.
	(magic_open): Do not allocate and deallocate DOTDOT, just consume
	the reference given to us.
	(magic_peropen_destroy): New function.
	(main): If in directory mode, install magic_peropen_destroy hook.

2003-08-17  Marcus Brinkmann  <marcus@gnu.org>

	* fakeroot.c: Include <stddef.h>.
	(struct netnode): Change type of member idport_locp
	to hurd_ihash_locp_t.
	(idport_ihash): Change type to struct hurd_ihash and initialize
	with HURD_IHASH_INITIALIZER.
	(new_node): Call hurd_ihash_add instead of ihash_add.
	(netfs_node_norefs): Call hrd_ihash_locp_remove instead
	ihash_locp_remove.
	(netfs_S_dir_lookup): Call hurd_ihash_find instead ihash_find.

2003-09-05  Greg Buchholz <greg@sleepingsquirrel.org>

	* fifo.c, new-fifo.c, null.c (trivfs_S_io_map): Change return value to
	EOPNOTSUPP (was EINVAL).

2003-03-05  Roland McGrath  <roland@frob.com>

	Make /hurd/magic support translator delegation via /servers/magic.
	* magic.c (struct magic): New structure.
	(magic, directory, dirbuf, dirbufsize): Variables removed,
	not members of struct magic.
	(trivfs_modify_stat, magic_getroot, trivfs_S_dir_readdir): Use a
	struct magic hanging off CNTL->hook rather than global variables.
	(trivfs_append_args): Likewise.